v1.3.1
- Added Strong Hands (Carry any item with 1 hand) 
- Added Invisibility
- Added Spawn Landmine (Host Only)
- Added Spawn Turret (Host Only)
- Added Spawn Random Landmines/Turrets  (Spawns a random number of mines/turrets in the factory, Host Only)
- Added Ability to force HoarderBugs to steal all items
- Possible fixes for ESP/Chams causing crashes/instability with frames

v1.3.0
- Added CHAMS w/ settings
- Added Super Shovel (Damage x1000)
- Added Support for 8 character hex codes for colors with alpha
- Added Create Mimics From Masks (Must pickup mask first)
- Added Lure Enemies to Player
- Added Lure All Enemies to Player
- Added Control Enemy (Use SpeedHack for movement Speed)
- Added Instant Interact
- Added No Cooldowns
- Added KeyBind for Kill Nearby Enemies
- Added Mouse Binds (Left, Right, Middle, Forward, Backward)
- Added ESP Enemy Filter Settings
- Added a host requirement label if not host for spawning enemies in the Enemy Manager
- Fixed No Carry Weight
- Removed SpawnRandomValueable (Use Item Manager)
- Major code changes to UI and hack executors to make it neat and tidy

v1.2.1
- Added Kill Nearby Enemies w/ Setting
- Added Scrap Loot Tiers w/ Settings and toggle
- Added Light to FreeCam (uses night vision settings)
- Fixed issue that may have caused issues with ESP and other hacks that use game objects

v1.2.0
- Added Spectate other players
- Added Mini Spectate Cameras
- Added Free Cameras
- Added Enemy Manager (Kill/Despawn/Spawn Enemies)
- Added Unloackables Manager
- Added Night Vision Settings
- Added Toggle cursor key bind
- Added Toggle for Factory Lights (Host Only)
- Added Flicker Lights (Host Only)
- Added Breaker Box ESP 
- Added Kill Everyone (Including yourself)
- Added Kill Everyone (Except yourself)
- Added Unlimited Shotgun Ammo
- Added Ghost Mode (Credit @Ugleh for the idea/code)
- Added option to enable/disable the rendering of player models while spectating/minicam